# ehitk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.venv-diagrams/: pyvenv.cfg
docs/: ehitk_architecture.py  logo.ai
src/ehitk/: __init__.py  cli.py  download.py  manifest.py  output.py  query.py  stats.py  values.py
src/ehitk/data/: custom_columns.json
src/ehitk/hologenomes/: commands.py
src/ehitk/mags/: __init__.py  commands.py
src/ehitk/metagenomes/: __init__.py  commands.py
src/ehitk/specimens/: __init__.py  commands.py
tests/: test_cli.py  test_manifest.py  test_query.py  test_values.py
